--- a/directory/apache2/apache2.yaml
+++ b/directory/apache2/apache2.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    run: nginx
-  name: nginx
+    run: apache
+  name: apache
 spec:
   containers:
   - image: apache2:latest
-    name: nginx
+    name: apache2
