--- a/helm/nginx/templates/app.yaml
+++ b/helm/nginx/templates/app.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .Release.Name }}-{{ .Values.name }}
   labels:
   {{- range $key, $value := .Values.labels }}
     {{ $key }}: {{ $value }}
