--- a/argoCD/helm-application.yaml
+++ b/argoCD/helm-application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx-test
+  name: nginx-helm
   namespace: argocd
 spec:
   destination:
@@ -9,9 +9,9 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    chart: nginx
-    repoURL: "https://github.com/gebalamariusz/ArgoCD/helm"
-    targetRevision: HEAD
+    chart: first-chart
+    repoURL: "https://gebalamariusz.github.io/ArgoCD/helm-charts"
+    targetRevision: 0.1.0
     helm:
       releaseName: helm-deployment
   syncPolicy:
