Added annotations to service

--- a/helm/nginx/values.yaml
+++ b/helm/nginx/values.yaml
@@ -10,3 +10,6 @@ applicationPort: 80
 serviceType: LoadBalancer
 serviceProtocol: TCP
 servicePort: 80
+
+loadBalancerType: elb
+loadBalancerInternal: false
