--- a/helm/nginx/templates/service.yaml
+++ b/helm/nginx/templates/service.yaml
@@ -3,6 +3,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.name }}-svc
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: {{ .Values.loadBalancerType }}
+    {{- if eq .Values.loadBalancerInternal }}
+    service.beta.kubernetes.io/aws-load-balancer-internal: {{ .Values.loadBalancerInternal }}
+    {{ end }}
 spec:
   selector:
   {{- range $key, $value := .Values.labels }}
