Fixed issue with loadbalancer

--- a/helm/nginx/values.yaml
+++ b/helm/nginx/values.yaml
@@ -11,5 +11,4 @@ serviceType: LoadBalancer
 serviceProtocol: TCP
 servicePort: 80
 
-loadBalancerType: elb
-loadBalancerInternal: false
+loadBalancerExternal: true
