--- a/helm/nginx/templates/service.yaml
+++ b/helm/nginx/templates/service.yaml
@@ -2,11 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}-svc
+  name: {{ .Release.Name }}-{{ .Values.name }}-svc
   annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: {{ .Values.loadBalancerType }}
-    {{- if .Values.loadBalancerInternal }}
-    service.beta.kubernetes.io/aws-load-balancer-internal: {{ .Values.loadBalancerInternal }}
+    {{- if .Values.loadBalancerExternal }}
+    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
     {{ end }}
 spec:
   selector:
