--- a/helm/nginx/templates/service.yaml
+++ b/helm/nginx/templates/service.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     {{- if .Values.loadBalancerExternal }}
     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
-    {{ end }}
+    {{- end }}
 spec:
   selector:
   {{- range $key, $value := .Values.labels }}
