Added _helpers.tpl and new revision of first chart

--- a/helm/nginx/templates/app.yaml
+++ b/helm/nginx/templates/app.yaml
@@ -1,16 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: {{ .Release.Name }}-{{ .Values.name }}
-  labels:
-  {{- range $key, $value := .Values.labels }}
-    {{ $key }}: {{ $value }}
-  {{- end }}
+  name: {{ include "first-chart.fullname" . }}
+  labels: {{ include "first-chart.selectorLabels" . | indent 4 }}
 spec:
   containers:
   - name: {{ .Values.name }}
     image: "{{ .Values.image.name }}:{{ .Values.image.version }}"
-    {{- if eq .Values.environment "prod" }}
+    {{- if eq .Values.labels.environment "prod" }}
     ports:
       - containerPort: {{ .Values.applicationPort }}
     {{ end }}
