--- a/argoCD/gitlab/gitlab-values.yaml
+++ b/argoCD/gitlab/gitlab-values.yaml
@@ -2,5 +2,8 @@ global:
   hosts:
     domain: gitlab.haitmg.pl
 
+certmanager-issuer:
+  email: gebalamariusz@gmail.com
+
 upgradeCheck:
   enabled: false
