--- a/argoCD/gitlab/gitlab-values.yaml
+++ b/argoCD/gitlab/gitlab-values.yaml
@@ -3,7 +3,7 @@ global:
   hosts:
     domain: gitlab.haitmg.pl
   registry:
-    bucket: mgebala-eks-s3-bucket
+    enabled: false
 
 certmanager-issuer:
   email: gebalamariusz@gmail.com
