Added bucket to registry in values

--- a/argoCD/gitlab/gitlab-values.yaml
+++ b/argoCD/gitlab/gitlab-values.yaml
@@ -4,7 +4,7 @@ global:
     domain: gitlab.haitmg.pl
   registry:
     bucket: mgebala-eks-s3-bucket
-    enabled: false
+    enabled: true
 
 gitlab-runner:
   install: false
