--- a/argoCD/gitlab/gitlab-values.yaml
+++ b/argoCD/gitlab/gitlab-values.yaml
@@ -1,9 +1,8 @@
 global:
   edition: ce
   hosts:
-    domain: gitlab.haitmg.pl
+    domain: haitmg.pl
   registry:
-    region: eu-central-1
     bucket: mgebala-eks-s3-bucket
     enabled: true
 
