--- a/argoCD/gitlab/gitlab-values.yaml
+++ b/argoCD/gitlab/gitlab-values.yaml
@@ -5,6 +5,9 @@ global:
   registry:
     bucket: mgebala-eks-s3-bucket
     enabled: true
+  ingress:
+    annotations:
+      service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
 
 gitlab-runner:
   install: false
