--- a/argoCD/gitlab/gitlab-values.yaml
+++ b/argoCD/gitlab/gitlab-values.yaml
@@ -5,7 +5,7 @@ global:
   registry:
     bucket: mgebala-eks-s3-bucket
     enabled: true
-  service:
+  ingress:
     annotations:
       service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
 
