--- a/argoCD/gitlab/gitlab-values.yaml
+++ b/argoCD/gitlab/gitlab-values.yaml
@@ -5,9 +5,12 @@ global:
   registry:
     bucket: mgebala-eks-s3-bucket
     enabled: true
-  ingress:
-    annotations:
-      service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
+
+nginx-ingress:
+  controller:
+    service:
+      annotations:
+        service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
 
 gitlab-runner:
   install: false
