--- a/argoCD/gitlab/gitlab-values.yaml
+++ b/argoCD/gitlab/gitlab-values.yaml
@@ -3,8 +3,13 @@ global:
   hosts:
     domain: haitmg.pl
   registry:
-    bucket: mgebala-eks-s3-bucket-virginia
     enabled: true
+
+s3:
+  bucket: mgebala-eks-s3-bucket-virginia
+  accesskey: AWS_ACCESS_KEY
+  secretkey: AWS_SECRET_KEY
+  region: eu-central-1
 
 nginx-ingress:
   controller:
